# nested-static-libs

./: .editorconfig  default.nix  flake.nix  meson.build  package.nix  shell.nix
src/: hostname.rs  libfrob.cpp  libfrob.hpp  main.cpp  meson.build
